--- a/week9_casestudy.ipynb
+++ b/week9_casestudy.ipynb
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "0eb30aa4",
    "metadata": {},
    "outputs": [
@@ -697,147 +697,147 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Month - 1</td>\n",
-       "      <td>7022544</td>\n",
+       "      <td>28090176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Month - 2</td>\n",
-       "      <td>7152303</td>\n",
+       "      <td>28609212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Month - 3</td>\n",
-       "      <td>6475939</td>\n",
+       "      <td>25903756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Month - 4</td>\n",
-       "      <td>8174449</td>\n",
+       "      <td>32697796</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Month - 5</td>\n",
-       "      <td>5995328</td>\n",
+       "      <td>23981312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Month - 6</td>\n",
-       "      <td>7151387</td>\n",
+       "      <td>28605548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Month - 7</td>\n",
-       "      <td>7287108</td>\n",
+       "      <td>29148432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Month - 8</td>\n",
-       "      <td>7816299</td>\n",
+       "      <td>31265196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Month - 9</td>\n",
-       "      <td>6703395</td>\n",
+       "      <td>26813580</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Month - 10</td>\n",
-       "      <td>7128210</td>\n",
+       "      <td>28512840</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Month - 11</td>\n",
-       "      <td>7032783</td>\n",
+       "      <td>28131132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Month - 12</td>\n",
-       "      <td>6111084</td>\n",
+       "      <td>24444336</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Month - 13</td>\n",
-       "      <td>5925424</td>\n",
+       "      <td>23701696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Month - 14</td>\n",
-       "      <td>7155515</td>\n",
+       "      <td>28622060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Month - 15</td>\n",
-       "      <td>5934156</td>\n",
+       "      <td>23736624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Month - 16</td>\n",
-       "      <td>6506659</td>\n",
+       "      <td>26026636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Month - 17</td>\n",
-       "      <td>7149383</td>\n",
+       "      <td>28597532</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Month - 18</td>\n",
-       "      <td>7083490</td>\n",
+       "      <td>28333960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>Month - 19</td>\n",
-       "      <td>6971953</td>\n",
+       "      <td>27887812</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Month - 20</td>\n",
-       "      <td>7124599</td>\n",
+       "      <td>28498396</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>Month - 21</td>\n",
-       "      <td>7389597</td>\n",
+       "      <td>29558388</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>Month - 22</td>\n",
-       "      <td>7560001</td>\n",
+       "      <td>30240004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Month - 23</td>\n",
-       "      <td>6687919</td>\n",
+       "      <td>26751676</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Month - 24</td>\n",
-       "      <td>7784747</td>\n",
+       "      <td>31138988</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>Month - 25</td>\n",
-       "      <td>6095918</td>\n",
+       "      <td>24383672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>Month - 26</td>\n",
-       "      <td>6512360</td>\n",
+       "      <td>26049440</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>Month - 27</td>\n",
-       "      <td>6267918</td>\n",
+       "      <td>25071672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>Month - 28</td>\n",
-       "      <td>7470920</td>\n",
+       "      <td>29883680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>Month - 29</td>\n",
-       "      <td>6772277</td>\n",
+       "      <td>27089108</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -845,45 +845,46 @@
       ],
       "text/plain": [
        "         Month  Sum of Sales\n",
-       "0    Month - 1       7022544\n",
-       "1    Month - 2       7152303\n",
-       "2    Month - 3       6475939\n",
-       "3    Month - 4       8174449\n",
-       "4    Month - 5       5995328\n",
-       "5    Month - 6       7151387\n",
-       "6    Month - 7       7287108\n",
-       "7    Month - 8       7816299\n",
-       "8    Month - 9       6703395\n",
-       "9   Month - 10       7128210\n",
-       "10  Month - 11       7032783\n",
-       "11  Month - 12       6111084\n",
-       "12  Month - 13       5925424\n",
-       "13  Month - 14       7155515\n",
-       "14  Month - 15       5934156\n",
-       "15  Month - 16       6506659\n",
-       "16  Month - 17       7149383\n",
-       "17  Month - 18       7083490\n",
-       "18  Month - 19       6971953\n",
-       "19  Month - 20       7124599\n",
-       "20  Month - 21       7389597\n",
-       "21  Month - 22       7560001\n",
-       "22  Month - 23       6687919\n",
-       "23  Month - 24       7784747\n",
-       "24  Month - 25       6095918\n",
-       "25  Month - 26       6512360\n",
-       "26  Month - 27       6267918\n",
-       "27  Month - 28       7470920\n",
-       "28  Month - 29       6772277"
+       "0    Month - 1      28090176\n",
+       "1    Month - 2      28609212\n",
+       "2    Month - 3      25903756\n",
+       "3    Month - 4      32697796\n",
+       "4    Month - 5      23981312\n",
+       "5    Month - 6      28605548\n",
+       "6    Month - 7      29148432\n",
+       "7    Month - 8      31265196\n",
+       "8    Month - 9      26813580\n",
+       "9   Month - 10      28512840\n",
+       "10  Month - 11      28131132\n",
+       "11  Month - 12      24444336\n",
+       "12  Month - 13      23701696\n",
+       "13  Month - 14      28622060\n",
+       "14  Month - 15      23736624\n",
+       "15  Month - 16      26026636\n",
+       "16  Month - 17      28597532\n",
+       "17  Month - 18      28333960\n",
+       "18  Month - 19      27887812\n",
+       "19  Month - 20      28498396\n",
+       "20  Month - 21      29558388\n",
+       "21  Month - 22      30240004\n",
+       "22  Month - 23      26751676\n",
+       "23  Month - 24      31138988\n",
+       "24  Month - 25      24383672\n",
+       "25  Month - 26      26049440\n",
+       "26  Month - 27      25071672\n",
+       "27  Month - 28      29883680\n",
+       "28  Month - 29      27089108"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data['Sum of Sales'] = data.sum(axis=1)\n",
-    "data[['Month', 'Sum of Sales']]"
+    "df = data[['Month', 'Sum of Sales']]\n",
+    "df"
    ]
   },
   {
@@ -896,24 +897,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "f2a91621",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-f0e41a29b60a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlargest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Sum of Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Month - 4</td>\n",
+       "      <td>32697796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Month - 8</td>\n",
+       "      <td>31265196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Month - 24</td>\n",
+       "      <td>31138988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Month - 22</td>\n",
+       "      <td>30240004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Month - 28</td>\n",
+       "      <td>29883680</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Month  Sum of Sales\n",
+       "3    Month - 4      32697796\n",
+       "7    Month - 8      31265196\n",
+       "23  Month - 24      31138988\n",
+       "21  Month - 22      30240004\n",
+       "27  Month - 28      29883680"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.nlargest(5)"
+    "df.nlargest(5,'Sum of Sales')"
    ]
   },
   {
@@ -926,12 +984,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "fc98412a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Sum of Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Month - 13</td>\n",
+       "      <td>23701696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Month - 15</td>\n",
+       "      <td>23736624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Month - 5</td>\n",
+       "      <td>23981312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Month - 25</td>\n",
+       "      <td>24383672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Month - 12</td>\n",
+       "      <td>24444336</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Month  Sum of Sales\n",
+       "12  Month - 13      23701696\n",
+       "14  Month - 15      23736624\n",
+       "4    Month - 5      23981312\n",
+       "24  Month - 25      24383672\n",
+       "11  Month - 12      24444336"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.nsmallest(5)"
+    "df.nsmallest(5,'Sum of Sales')"
    ]
   },
   {
@@ -963,53 +1090,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "674a2256",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da271ab8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37d87adc",
+   "execution_count": 23,
+   "id": "9e4b4d64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.head()"
+    "import scipy.stats as stats\n",
+    "import scipy as sc\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5a0b7734",
+   "execution_count": 24,
+   "id": "674a2256",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ols' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-0b6fecdb32c5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mformula\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'len ~ C(Zone - A) + C(Zone - B) + C(Zone - C)+C(Zone - D):C(Zone - A)'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mols\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mformula\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0maov_table\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0manova_lm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtyp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ols' is not defined"
+     "data": {
+      "text/plain": [
+       "(5.672056106843581, 0.0011827601694503335)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_value,p_value=stats.f_oneway(data['Zone - A'],data['Zone - B'],data['Zone - C'],data['Zone - D'])\n",
+    "f_value,p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "da271ab8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject Null hypothesis and accept alternate hypothesis\n"
      ]
     }
    ],
    "source": [
-    "formula = 'len ~ C(Zone - A) + C(Zone - B) + C(Zone - C)+C(Zone - D):C(Zone - A)'\n",
-    "model = ols(formula, data).fit()\n",
-    "aov_table = anova_lm(model, typ=2)"
+    "if p_value<=0.05:\n",
+    "    print(\"Reject Null hypothesis and accept alternate hypothesis\")\n",
+    "else:\n",
+    "    print(\"Reject Alternate Hypothesis and accept Null hypothesis\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65edaa58",
+   "metadata": {},
+   "source": [
+    "Clearly , The sum of sales of atleast one zone is not equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a0b7734",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
