--- a/week11__activity_students_ipynb.ipynb
+++ b/week11__activity_students_ipynb.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Avinomaria/DSA_ICTAK_QandA/blob/main/week11__activity_students_ipynb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "aDe0EDhPlWOT"
       },
       "source": [
@@ -2828,8 +2818,7 @@
     "colab": {
       "collapsed_sections": [],
       "name": "week11_-activity-students-ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
